Fixed use of deprecated method