@@ -102,7 +102,7 @@ public class User {
 
     private Discount createDiscount(String typeDiscount) {  // Factory method: create a type of discount
         try {
-            return (Discount) Class.forName("tds.AppMusic.internal.discount."+typeDiscount).newInstance();
+            return (Discount) Class.forName("tds.AppMusic.internal.discount."+typeDiscount).getDeclaredConstructor().newInstance();
         } catch (ReflectiveOperationException e) {
             return new NullDiscount();
         }
